# phi

./: .gitignore  AGENTS.md  Cargo.toml  README.md  config.scm  main.scm  official-plugins.json  phi.json
crates/phi-cli/: Cargo.toml
crates/phi-cli/src/: main.rs
crates/phi-core/: Cargo.toml
crates/phi-core/src/: capability.rs  file_edit.rs  home.rs  http.rs  lib.rs  permissions.rs  plugin.rs  policy_store.rs  process.rs  session.rs  skill.rs
crates/phi-eval/: Cargo.toml
crates/phi-eval/src/: lib.rs
crates/phi-protocol/: Cargo.toml
crates/phi-protocol/src/: lib.rs
crates/phi-runtime/: Cargo.toml  build.rs
crates/phi-runtime/src/: lib.rs  observability.rs  workflow.rs
crates/phi-steel/: Cargo.toml
crates/phi-steel/src/: lib.rs  plugin_prelude.scm
crates/phi-tui/: Cargo.toml
crates/phi-tui/src/: composer.rs  diff_render.rs  main.rs
plugins/codex-patch/: plugin.scm
plugins/context-management/: plugin.scm
plugins/dynamic-workflows/: plugin.scm
plugins/dynamic-workflows/runner/: api.mjs  delegate.test.mjs  workflow-inspect.mjs  workflow-module.mjs  workflow-module.test.mjs  workflow-runner.mjs  workflow-runner.test.mjs  worktrees.mjs  worktrees.test.mjs
plugins/dynamic-workflows/skills/dynamic-workflows/: SKILL.md
plugins/dynamic-workflows/workflows/: delegate.js  example.js  scheduling-example.js
plugins/openai/: plugin.scm
plugins/openrouter/: plugin.scm
plugins/responses/: plugin.scm
plugins/simple-compaction/: plugin.scm
policy/: agent.scm
policy/compaction/: simple.scm  structured.scm
policy/prompts/: simple.scm
policy/providers/: openai.scm  openrouter.scm  responses.scm
policy/tools/: codex-patch.scm  context.scm  openai-web-search.scm  openrouter-web-search.scm  skills.scm
policy/tools/dynamic-workflows/: main.scm  plugin.json
policy/tools/dynamic-workflows/runner/: api.mjs  workflow-runner.mjs  workflow-runner.test.mjs  worktrees.mjs  worktrees.test.mjs
policy/tools/dynamic-workflows/skills/dynamic-workflows/: SKILL.md
policy/tools/dynamic-workflows/workflows/: scheduling-example.js
skills/phi-harness/: SKILL.md
skills/phi-harness/agents/: openai.yaml
skills/phi-harness/references/: architecture.md  configuration.md  extensions.md  operations.md
skills/planning/: SKILL.md
