[workspace]
members = [
  "crates/phi-cli",
  "crates/phi-core",
  "crates/phi-eval",
  "crates/phi-protocol",
  "crates/phi-runtime",
  "crates/phi-steel",
  "crates/phi-tui",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1"
base64 = "0.22"
blake3 = "1"
clap = { version = "4", features = ["derive"] }
crossterm = { version = "0.29", features = ["event-stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
ratatui = "0.30"
futures-util = "0.3"
similar = "2"
steel-core = "0.8.2"
tempfile = "3"
tokio = { version = "1", features = ["io-util", "macros", "process", "rt-multi-thread", "signal", "time"] }
tokio-util = "0.7"
unicode-width = "0.2"
uuid = { version = "1", features = ["v4"] }
