[package]
name = "phi-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "phi"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
phi-core = { path = "../phi-core" }
phi-eval = { path = "../phi-eval" }
phi-protocol = { path = "../phi-protocol" }
phi-runtime = { path = "../phi-runtime" }
phi-steel = { path = "../phi-steel" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
