[package]
name = "phi-core"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
blake3.workspace = true
futures-util.workspace = true
nix.workspace = true
phi-protocol = { path = "../phi-protocol" }
portable-pty.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio.workspace = true
uuid.workspace = true
