[package]
name = "phi-runtime"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
phi-core = { path = "../phi-core" }
phi-protocol = { path = "../phi-protocol" }
phi-steel = { path = "../phi-steel" }
serde.workspace = true
serde_json.workspace = true
similar.workspace = true
tokio.workspace = true
tokio-util.workspace = true
uuid.workspace = true

[target.'cfg(unix)'.dependencies]
nix.workspace = true

[dev-dependencies]
tempfile.workspace = true
