[package]
name = "phi-tui"
version.workspace = true
edition.workspace = true

[[bin]]
name = "phi-tui"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
crossterm.workspace = true
futures-util.workspace = true
phi-runtime = { path = "../phi-runtime" }
ratatui.workspace = true
serde_json.workspace = true
tokio.workspace = true
unicode-width.workspace = true
